--- a/digitalbanking-accountsservice/src/main/resources/application.properties
+++ b/digitalbanking-accountsservice/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.validationQuery = SELECT 1
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
+server.port=8085
+
 
 
 
