--- a/digitalbanking-accountsservice/src/main/resources/archive/config/application.yml
+++ b/digitalbanking-accountsservice/src/main/resources/archive/config/application.yml
@@ -4,7 +4,7 @@ spring:
       ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   datasource:
-    url: jdbc:postgresql://postgres:5432/postgres
+    url: jdbc:postgresql://localhost:5432/db_account
     username: postgres
-    password: capg123
+    password: postgres
     driver-class-name: org.postgresql.Driver
