--- a/digitalbanking-loanservice/src/main/resources/application.properties
+++ b/digitalbanking-loanservice/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.validationQuery = SELECT 1
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
-
+server.port=8110
 
 
 
