--- a/digitalbanking-cardsservice/pom.xml
+++ b/digitalbanking-cardsservice/pom.xml
@@ -34,9 +34,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.36</version>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4.1208</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
