--- a/digitalbanking-cardsservice/src/main/resources/configuration.yml
+++ b/digitalbanking-cardsservice/src/main/resources/configuration.yml
@@ -1,20 +1,20 @@
 database:
   # the name of your JDBC driver
-  driverClass: com.mysql.jdbc.Driver
+  driverClass: org.postgresql.Driver
 
   # the username
-  user: root
+  user: postgres
 
   # the password
-  password: India123
+  password: postgres
 
   # the JDBC URL
-  url: jdbc:mysql://127.0.0.1:3306/dbt
+  url: jdbc:postgresql://localhost:5432/db_cards
 
   # any properties specific to your JDBC driver:
   properties:
     charSet: UTF-8
-    hibernate.dialect: org.hibernate.dialect.MySQLDialect
+    hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 
   # the maximum amount of time to wait on an empty pool before throwing an exception
   maxWaitForConnection: 1s
